<resources>
    <string name="app_name">The Ripple Effect</string>
    <string name="title_activity_location">Location</string>
    <string name="username">E-mail</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_log_in">Or, Log In</string>
    <string name="or_sign_up">Or, Sign Up</string>
    <string name="guest">Enter as guest</string>
    <string name="user_id_image">User ID image</string>
    <string name="loggedIn">Logged In Successfully, welcome</string>
    <string name="failed_log_in"> Failed to log in\nplease check your username or password</string>
    <string name="signed_up">Signed Up Successfully, welcome</string>
    <string name="failed_sign_up"> Failed to sign up\nplease check your username or password</string>
    <string name="my_profile">Profile</string>
    <string name="log_out"> Log out</string>
    <string name="create_new_puddle">Form a new puddle</string>
    <string name="create_new_ripple">Create a new ripple</string>
    <string name="puddle_name">Puddle title: </string>
    <string name="puddle_initiator_name">Initiator name: </string>
    <string name="Quest">Quest:  </string>
    <string name="Accept">Accept</string>
    <string name="status">Status: </string>
    <string name="Location">Location: </string>
    <string name="date_created">Date created: </string>
    <string name="type">Type: </string>
    <string name="Finish">Finish</string>
    <string name="Ongoing">Ongoing</string>
    <string name="Finished">Finished</string>
    <string name="ripples_required">Number of ripples required: </string>
    <string name="ripples_created">Number of ripples created: </string>
    <string name="Credibility">Credibility: </string>
    <string name="boost_credibility">Encourage</string>
    <string name="credibility_boosts"> Credibility boosts: </string>
    <string name="report_as_scam">Report</string>
    <string name="scam_reports">Scam reports: </string>
    <string name="image"> Images: </string>
    <string name="detail">Details</string>
    <string name="my_puddles">My puddles</string>
    <string name="my_ripples">My ripples</string>
    <string name="add_location">Add location</string>
    <string name="view_location"> Location</string>
    <string name="details">Details: </string>
    <string name="my_activity">My activity</string>
    <string name="edit">Edit</string>
    <string name="country">Country: </string>
    <string name="City">City: </string>
    <string name="add_image">Add images</string>
    <string name="no_name">Add the puddle name </string>
    <string name="no_quest">Add the puddle quest </string>
    <string name="no_country">Add the puddle country location </string>
    <string name="no_city">Add the puddle city location </string>
    <string name="no_ripples">Add the puddle required ripples </string>
    <string name="no_type">Add the puddle type </string>
    <string name="no_status">Add the puddle status </string>
    <string name="no_details">Add the puddles details </string>
    <string name="no_function"> This feature will be added in future update</string>
    <string name="created_successfully">Created Successfully</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="types_prompt">Choose a type</string>
    <string name="empty_text">Nothing is available</string>
    <string name="heroes">Heroes of this puddle: </string>
    <string name="accepted_quest">Thank you for accepting this and creating a better world</string>
    <string name="delete_image">Delete Image</string>
    <string name="pick_image">Pick Image</string>
    <string name="please_pick_image">Please pick an Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="next">Continue</string>
    <string name="Description">Description:</string>
    <string name="chosen_image">Chosen Image</string>
    <string name="no_image">Please provide an image for the puddle</string>
    <string name="uploading">Uploading...</string>
    <string name="uploaded">Uploaded</string>
    <string name="failed">Failed</string>
    <string name="default_description">No description</string>
    <string name="are_you_sure">Do you want to do this?</string>
    <string name="upload_message">Once you agree to upload the image you can not change it. \nDo you still want to do that?</string>
    <string name="back_message">Once you press yes, all content uploaded will be deleted. \\nDo you still want to continue?</string>
    <string name="no_description">No description was provided</string>
    <string name="no_extra_image">Please pick an image</string>
    <string name="add_extra_image">Do you want to add this image as an extra image?</string>
    <string name="delete_message">Do you want to delete this item?</string>
    <string-array name="types_arrays">
        <item>Money</item>
        <item>Effort</item>
        <item>Giveaway</item>
        <item>Hitchhike</item>
        <item>Food</item>
        <item>Babysit</item>
        <item>Search</item>
        <item>Other</item>
    </string-array>
</resources>