<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcceptQuestActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_puddle_title_label"
                style="@style/label_style"
                android:text="@string/puddle_name" />

            <TextView
                android:id="@+id/puddle_name_text"
                style="@style/text_style" />
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_date_label"
                style="@style/label_style"
                android:text="@string/date_created" />

            <TextView
                android:id="@+id/date_text"
                style="@style/text_style" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_initiator_name_title"
                style="@style/label_style"
                android:text="@string/puddle_initiator_name" />

            <TextView
                android:id="@+id/initiator_name_text"
                style="@style/text_style" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_quest_label"
                style="@style/label_style"
                android:text="@string/Quest"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="222dp" />

            <TextView
                android:id="@+id/quest_text"
                style="@style/text_style" />
        </LinearLayout>


        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/read_location_country_label"
                style="@style/label_style"
                android:text="@string/country" />

            <TextView
                android:id="@+id/location_country_text"
                style="@style/text_style" />
            <Button
                android:id="@+id/boost_credibility_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="promoteCredibility"
                android:text="@string/boost_credibility" />

            <TextView
                android:id="@+id/read_location_city_label"
                style="@style/label_style"
                android:text="@string/City" />

            <TextView
                android:id="@+id/location_city_text"
                style="@style/text_style" />
            <Button
                android:id="@+id/view_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="futureFeature"
                android:text="@string/view_location" />


        </LinearLayout>


        <LinearLayout style="@style/linear_layout_style">


            <TextView
                android:id="@+id/read_ripples_created_label"
                style="@style/label_style"
                android:text="@string/ripples_created" />

            <TextView
                android:id="@+id/ripples_created_text"
                style="@style/text_style" />


            <TextView
                android:id="@+id/read_ripples_required_label"
                style="@style/label_style"
                android:text="@string/ripples_required" />

            <TextView
                android:id="@+id/required_ripple_text"
                style="@style/text_style" />

        </LinearLayout>


        <LinearLayout style="@style/linear_layout_style">
            <TextView
                android:id="@+id/read_type_label"
                style="@style/label_style"
                android:text="@string/type" />

            <TextView
                android:id="@+id/type_text"
                style="@style/text_style" />

            <TextView
                android:id="@+id/read_status_label"
                style="@style/label_style"
                android:text="@string/status" />

            <TextView
                android:id="@+id/Status_text"
                style="@style/text_style" />

        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/read_credibility_label"
                style="@style/label_style"
                android:text="@string/credibility_boosts" />

            <TextView
                android:id="@+id/credibility_text"
                style="@style/text_style" />

            <TextView
                android:id="@+id/read_reports_label"
                style="@style/label_style"
                android:text="@string/scam_reports" />

            <TextView
                android:id="@+id/reports_text"
                style="@style/text_style" />
            <Button
                android:id="@+id/report_spam_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_as_scam"
                android:onClick="reportScam"/>
        </LinearLayout>
        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/read_details_label"
                style="@style/label_style"
                android:text="@string/details"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details_text"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:maxLength="250"
                android:maxLines="5"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                tools:text="lgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkglgglhglkglhgkghgkg" />
        </LinearLayout>
        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/read_heroes_label"
                style="@style/label_style"
                android:text="@string/heroes"
                android:textSize="20sp" />
            <RelativeLayout
                android:id="@+id/heroes_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AcceptQuestActivity">
                <ListView
                    android:id="@+id/heroes_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".MainActivity"
                    android:padding="10dp"
                    android:orientation="vertical">
                </ListView>
                <LinearLayout
                    android:id="@+id/empty_heroes_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/empty_heroes_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/life_png"
                        android:layout_gravity="center"/>
                    <TextView
                        style="@style/text_style"
                        android:id="@+id/empty_heroes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_text"
                        android:gravity="center"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/read_images_label"
                style="@style/label_style"
                android:text="@string/image"
                android:textSize="20sp" />


            <RelativeLayout
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AcceptQuestActivity">
                <ListView
                    android:id="@+id/images_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".MainActivity"
                    android:padding="10dp"
                    android:orientation="vertical">
                </ListView>
                <LinearLayout
                    android:id="@+id/empty_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/image_empty_view_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/life_png"
                        android:layout_gravity="center"/>
                    <TextView
                        style="@style/text_style"
                        android:id="@+id/image_empty_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_text"
                        android:gravity="center"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
            <Button
                android:id="@+id/accept_quest_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="futureFeature"
                android:text="@string/Accept" />
    </LinearLayout>

</ScrollView>