<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <Button
            android:id="@+id/form_new_puddle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_puddle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="center"
                tools:src="@drawable/common_google_signin_btn_text_light">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/add_main_images_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/pick_image"
                    android:textSize="15sp"/>
                <Button
                    android:id="@+id/delete_main_images_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/delete_image" />
                <Button
                    android:id="@+id/upload_main_images_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/upload_image"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">
            <TextView
                android:id="@+id/write_puddle_title_label"
                style="@style/label_style"
                android:text="@string/puddle_name" />

            <EditText
                android:id="@+id/edit_puddle_name_text"
                style="@style/text_style"
                android:layout_weight="3"
                android:hint="@string/puddle_name"
                android:text="@string/log_out"/>
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_quest_label"
                style="@style/label_style"
                android:text="@string/Quest"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="222dp" />

            <EditText
                android:id="@+id/edit_quest_text"
                style="@style/text_style"
                android:hint="@string/Quest"
                android:text="@string/log_out"/>
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_style">

            <TextView
                android:id="@+id/write_location_country_label"
                style="@style/label_style"
                android:text="@string/country"
                />

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textDirection="anyRtl" />


        </LinearLayout>
        <LinearLayout
            style="@style/linear_layout_style">
            <TextView
                android:id="@+id/write_location_city_label"
                style="@style/label_style"
                android:text="@string/City"/>

            <EditText
                android:id="@+id/edit_location_city_text"
                style="@style/text_style"
                android:hint="@string/City"
                android:text="@string/log_out"/>
        </LinearLayout>
        <Button

            android:id="@+id/add_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_location" />
        <LinearLayout
            style="@style/linear_layout_style">
            <TextView
                android:id="@+id/write_ripples_required_label"
                style="@style/label_style"
                android:text="@string/ripples_required"
                />

            <EditText
                android:text="555"
                android:id="@+id/edit_required_ripple_text"
                style="@style/text_style"
                android:inputType="number"
                android:maxLength="3"
                android:hint="@string/ripples_required"/>
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">
        </LinearLayout>

        <LinearLayout style="@style/linear_layout_style">
            <TextView
                android:id="@+id/write_type_label"
                style="@style/label_style"
                android:text="@string/type" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textDirection="anyRtl"
                />


        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_style"
            android:orientation="vertical">

            <TextView
                android:id="@+id/write_details_label"
                style="@style/label_style"
                android:text="@string/details"
                android:textSize="20sp" />

            <EditText
                android:text="@string/log_out"
                android:id="@+id/edit_details_text"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:maxLength="250"
                android:maxLines="5"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:hint="@string/details"
                tools:text="" />
        </LinearLayout>

        <LinearLayout
            style="@style/linear_layout_style"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/write_images_label"
                style="@style/label_style"
                android:text="@string/image"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/extra_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    tools:src="@drawable/common_google_signin_btn_text_light">
                </ImageView>
                <TextView
                    style="@style/label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"/>
                <EditText
                    android:id="@+id/extra_image_description"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:maxLength="100"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/pick_extra_images_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/pick_image"
                        android:textSize="15sp"/>
                    <Button
                        android:id="@+id/delete_extra_images_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/delete_image" />
                    <Button
                        android:id="@+id/add_extra_images_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/add_image"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/write_image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AcceptQuestActivity">
                <ListView
                    android:id="@+id/extra_images_list"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    tools:context=".MainActivity"
                    android:padding="10dp"
                    android:orientation="vertical">
                </ListView>
                <LinearLayout
                    android:id="@+id/empty_write_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/image_write_empty_view_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/life_png"
                        android:layout_gravity="center"/>
                    <TextView
                        style="@style/text_style"
                        android:id="@+id/image_write_empty_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_text"
                        android:gravity="center"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>